[package]
name = "rmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rusqlite = { version = "0.28.0", features = ["bundled"] }
chrono = "0.4"
fs_extra = "1.2.0"
sha256 = "1.0.3"
shellexpand = "2.1.2"
rustyline = "10.0.0"
colored = "2.0.0"
termion = "1.5.6"
docopt = "1.1.1"