[package]
name = "rmt"
authors = ["Amine Zouitine"]
description = "remove files or directories and save them in trash."
documentation = "https://github.com/AmineZouitine/rmt.rs"
homepage = "https://github.com/AmineZouitine/rmt.rs"
repository = "https://github.com/AmineZouitine/rmt.rs"
version = "0.1.8"
edition = "2021"

[lib]
name = "rmt_lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rusqlite = { version = "0.28.0", features = ["bundled"] }
chrono = "0.4"
fs_extra = "1.2.0"
sha256 = "1.0.3"
shellexpand = "2.1.2"
rustyline = "10.0.0"
colored = "2.0.0"
termion = "1.5.6"
clap = { version = "4.0.13", features = ["derive"] }
assert_cmd = "2.0"
predicates = "2.1"