[package]
name = "rmt"
authors = ["Amine Zouitine"]
description = "remove files or directories and save them in trash."
documentation = "https://github.com/AmineZouitine/rmt.rs"
homepage = "https://github.com/AmineZouitine/rmt.rs"
repository = "https://github.com/AmineZouitine/rmt.rs"
version = "0.2.1"
edition = "2021"

[lib]
name = "rmt_lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rusqlite = { version = "0.29.0", features = ["bundled"] }
chrono = "0.4"
fs_extra = "1.2.0"
sha256 = "1.0.3"
shellexpand = "3.1.0"
rustyline = "11.0.0"
colored = "2.0.0"
clap = { version = "4.0.13", features = ["derive"] }
assert_cmd = "2.0"
predicates = "3.0.3"
chacha20poly1305 = { version = "0.10.0", features = ["stream"] }
rand = "0.8.5"
rust-argon2 = "1.0"
dialoguer = "0.10.2"
crossterm = "0.26.1"
dirs = "5.0.1"
field_count = "0.1.1"
zip = "0.6.6"
walkdir = "2.3.3"
